feat: v1.1.0 release
Made-with: Cursor